# TracePlane

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  LANGFUSE_TRACING.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_fix_p8_timestamp_columns.py  af335969ab64_initial_schema_users_agents_audit_logs.py  b1c2d3e4f5a6_p9_replay_observability.py  b7f2c91d4e03_add_executions_prompt_versions_evaluations.py  c2d3e4f5a6b7_add_api_key_environment.py  c3d8e12f5a67_add_performance_indexes.py  d3e4f5a6b7c8_p10_differentiation.py  d4e8f1a2b3c4_add_agent_workflow_tools.py  e4f5a6b7c8d9_p11_hardening.py  e5f6a7b8c9d0_add_sdk_ingestion.py  f6a7b8c9d0e1_p8_production_observability.py  f7a8b9c0d1e2_sandbox_mode.py  g8h9i0j1k2l3_remove_sandbox_mode.py  i0j1k2l3m4n5_alert_trigger_stats.py  j0k1l2m3n4o5_remove_prompt_versioning.py  k1l2m3n4o5p6_github_oauth.py  l2m3n4o5p6q7_remove_alerts.py  m3n4o5p6q7r8_production_providers_alerts.py  n4o5p6q7r8s9_alert_events.py  o5p6q7r8s9t0_alert_polish.py  p6q7r8s9t0u1_alert_events_cascade.py
backend/app/: celery_app.py  main.py
backend/app/agents/: graph.py  nodes.py  state.py  tools.py
backend/app/auth/: jwt.py  middleware.py  roles.py
backend/app/core/: api_key.py  auth_cache.py  (+20 more)
backend/scripts/: benchmark_endpoints.py
backend/tests/: conftest.py  test_agent_discovery.py  test_alert_email.py  test_api_routes.py  test_cache.py  test_encryption.py  test_execution_compare.py  test_github_auth.py  test_health.py  test_latency.py  test_oauth_state.py  test_onboarding.py  test_quickstart.py  test_rate_limit.py  test_replay.py  test_security.py  test_session_replay.py  test_time_buckets.py  test_workspace_isolation.py  test_ws_auth.py
sdk/: README.md  pyproject.toml
sdk/agentops_hub/: __init__.py  client.py
sdk/tests/: test_client.py
sdk/traceplane/: __init__.py  client.py
(+205 files in other folders)
