[project]
name = "agentops-hub"
version = "0.1.0"
description = "AI Agent Control Plane — monitor, evaluate, govern, and debug AI agents in production"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-openai>=0.2.0",
    "langfuse>=4.0.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 0
show_missing = true