[project]
name = "traceplane"
version = "0.2.0"
description = "Traceplane Python SDK — instrument AI agents and send telemetry to your workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["traceplane", "agentops_hub"]
